// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Basic functionality: Textarea has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "autoComplete": "on",
  "children": "textarea value",
  "disabled": false,
  "id": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [MockFunction],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onKeyUp": [Function],
  "placeholder": "Placeholder",
  "rows": 3,
  "styled-component": "true",
  "test-style": Object {
    "::placeholder": Object {
      "color": "$theme.colors.foregroundAlt",
    },
    "backgroundColor": "$theme.colors.inputFill",
    "borderColor": "$theme.colors.inputFill",
    "borderRadius": "$theme.sizing.scale100",
    "borderStyle": "solid",
    "borderWidth": "1px",
    "boxShadow": "0 2px 6px transparent",
    "boxSizing": "border-box",
    "caretColor": "$theme.colors.primary",
    "color": "$theme.colors.foreground",
    "cursor": "text",
    "display": "flex",
    "fontFamily": "$theme.typography.font300.fontFamily",
    "fontSize": "$theme.typography.font300.fontSize",
    "fontWeight": "$theme.typography.font300.fontWeight",
    "lineHeight": "$theme.typography.font300.lineHeight",
    "maxWidth": "100%",
    "outline": "none",
    "paddingBottom": "$theme.sizing.scale400",
    "paddingLeft": "$theme.sizing.scale500",
    "paddingRight": "$theme.sizing.scale500",
    "paddingTop": "$theme.sizing.scale400",
    "transitionDuration": "$theme.animation.timing100",
    "transitionProperty": "border, boxShadow, backgroundColor",
    "transitionTimingFunction": "$theme.animation.easeOutCurve",
    "width": "100%",
  },
  "type": "textarea",
  "value": "textarea value",
}
`;

exports[`Textarea Basic functionality: textarea renders BaseInput with correct props passed 1`] = `
Object {
  "adjoined": "none",
  "aria-describedby": null,
  "aria-label": null,
  "aria-labelledby": null,
  "autoComplete": "on",
  "autoFocus": false,
  "data-baseweb": "textarea",
  "disabled": false,
  "error": false,
  "inputRef": Object {
    "current": <textarea
      aria-invalid="false"
      aria-required="false"
      autocomplete="on"
      name=""
      placeholder="Placeholder"
      rows="3"
      styled-component="true"
      test-style="[object Object]"
      type="textarea"
    >
      textarea value
    </textarea>,
  },
  "name": "",
  "onBlur": [MockFunction],
  "onChange": [MockFunction],
  "onFocus": [MockFunction],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onKeyUp": [Function],
  "overrides": Object {
    "Input": Object {
      "component": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
    },
    "InputContainer": Object {
      "component": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
    },
  },
  "placeholder": "Placeholder",
  "required": false,
  "rows": 3,
  "size": "default",
  "type": "textarea",
  "value": "textarea value",
}
`;

exports[`Textarea With component overrides: components overrides get passed to the BaseInput 1`] = `
Object {
  "adjoined": "none",
  "aria-describedby": null,
  "aria-label": null,
  "aria-labelledby": null,
  "autoComplete": "on",
  "autoFocus": false,
  "data-baseweb": "textarea",
  "disabled": false,
  "error": false,
  "inputRef": Object {
    "current": <span
      id="test-input"
    >
      <textarea
        aria-invalid="false"
        aria-required="false"
        autocomplete="on"
        name=""
        placeholder="Placeholder"
        rows="3"
        styled-component="true"
        test-style="[object Object]"
        type="textarea"
      >
        textarea value
      </textarea>
    </span>,
  },
  "name": "",
  "onBlur": [MockFunction],
  "onChange": [MockFunction],
  "onFocus": [MockFunction],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onKeyUp": [Function],
  "overrides": Object {
    "Input": Object {
      "component": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
    },
    "InputContainer": Object {
      "component": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
    },
  },
  "placeholder": "Placeholder",
  "required": false,
  "rows": 3,
  "size": "default",
  "type": "textarea",
  "value": "textarea value",
}
`;
